[gd_scene load_steps=39 format=2]

[ext_resource path="res://assets/Pixel Adventure 2/Enemies/Bee/Idle (36x34).png" type="Texture" id=1]
[ext_resource path="res://assets/Pixel Adventure 2/Enemies/Bee/Attack (36x34).png" type="Texture" id=2]
[ext_resource path="res://assets/Pixel Adventure 2/Enemies/Bee/Hit (36x34).png" type="Texture" id=3]
[ext_resource path="res://Characters/enemies/Bee.gd" type="Script" id=4]
[ext_resource path="res://Projectile/BeeSting.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 2 )
region = Rect2( 36, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 2 )
region = Rect2( 108, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 2 )
region = Rect2( 180, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 2 )
region = Rect2( 216, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 2 )
region = Rect2( 252, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 3 )
region = Rect2( 36, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 3 )
region = Rect2( 108, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 36, 34 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": true,
"name": "attack",
"speed": 20.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
}, {
"frames": [ SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ) ],
"loop": true,
"name": "hit",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 10, 11.5 )

[sub_resource type="AnimationNodeAnimation" id=87]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=88]
animation = "hit"

[sub_resource type="AnimationNodeAnimation" id=89]
animation = "attack"

[sub_resource type="AnimationNodeOneShot" id=86]
fadein_time = 0.0
fadeout_time = 0.0

[sub_resource type="AnimationNodeOneShot" id=64]
fadein_time = 0.0
fadeout_time = 0.0

[sub_resource type="AnimationNodeBlendTree" id=60]
graph_offset = Vector2( -721.562, 129.721 )
nodes/Animation/node = SubResource( 89 )
nodes/Animation/position = Vector2( -480, 260 )
"nodes/Animation 2/node" = SubResource( 87 )
"nodes/Animation 2/position" = Vector2( -500, 120 )
"nodes/Animation 3/node" = SubResource( 88 )
"nodes/Animation 3/position" = Vector2( -120, 280 )
nodes/attack/node = SubResource( 86 )
nodes/attack/position = Vector2( -260, 80 )
nodes/hit/node = SubResource( 64 )
nodes/hit/position = Vector2( 60, 80 )
node_connections = [ "attack", 0, "Animation 2", "attack", 1, "Animation", "output", 0, "hit", "hit", 0, "attack", "hit", 1, "Animation 3" ]

[sub_resource type="Animation" id=91]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=92]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hit" ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_hit_animation_finished"
} ]
}

[sub_resource type="Animation" id=53]
resource_name = "idle"
length = 0.05
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "idle" ]
}

[sub_resource type="RectangleShape2D" id=61]
extents = Vector2( 18, 3 )

[sub_resource type="RectangleShape2D" id=66]
extents = Vector2( 12, 12 )

[sub_resource type="CircleShape2D" id=90]
radius = 100.0

[node name="Bee" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 4 )
projectile = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 48 )
animation = "idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1, 2 )
shape = SubResource( 49 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 60 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/attack/active = false
parameters/hit/active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 91 )
anims/hit = SubResource( 92 )
anims/idle = SubResource( 53 )

[node name="JumpHurtBox" type="Area2D" parent="."]
position = Vector2( 1, -13 )
collision_layer = 2048
collision_mask = 0

[node name="JumpCollisionShape" type="CollisionShape2D" parent="JumpHurtBox"]
rotation = 3.14159
shape = SubResource( 61 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyCollisionHitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="EnemyCollisionShape" type="CollisionShape2D" parent="EnemyCollisionHitBox"]
rotation = 1.5708
shape = SubResource( 66 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="ProjectileAttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileAttackArea"]
shape = SubResource( 90 )

[node name="LaunchPosition" type="Position2D" parent="."]
position = Vector2( 0, 12 )

[connection signal="body_shape_entered" from="EnemyCollisionHitBox" to="." method="_on_EnemyCollisionHitBox_body_shape_entered"]
[connection signal="body_shape_entered" from="ProjectileAttackArea" to="." method="_on_ProjectileAttackArea_body_shape_entered"]
[connection signal="body_shape_exited" from="ProjectileAttackArea" to="." method="_on_ProjectileAttackArea_body_shape_exited"]
